<resources>
    <string name="app_name">InternshipOnline</string>
    <string name="create_account">Create an Account</string>
    <string name="login_account">Login to\nyour Account</string>
    <string name="user_email">Username or email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="contact">Contact No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>

    <string name="notification">Notification</string>

    <string name="category">Category</string>

    <string name="delete_profile">Delete Profile</string>
    <string name="profile">Profile</string>
    <string name="user_list">User Data With Listview</string>
    <string name="user_custom_list">User Custom Listview</string>
    <string name="logout">Logout</string>

    <string name="user_recycler">User Data With Recycler</string>
    <string name="amazon_category">Amazone Category</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="submit">Submit</string>

    <string name="activity_fragment">Activity To Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_demo">Tab Layout With ViewPager</string>
    <string name="title_activity_nav_demo">NavDemoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="navigation_drawer">Navigation Drawer</string>

    <string name="bottom_nav">Bottom Navigation</string>
    <string name="current_location">Current Location</string>

    <string name="razorpay_demo">Razorpay Gateway</string>

    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>