<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/bg_style"
    android:orientation="vertical"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="Welcome"
            style="@style/text_18"/>

        <TextView
            android:id="@+id/dashboard_name"
            android:layout_marginLeft="@dimen/_2sdp"
            style="@style/text_bold_20"/>

    </LinearLayout>

    <Button
        android:id="@+id/dashboard_profile"
        android:text="@string/profile"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        style="@style/button_16"/>

    <Button
        android:id="@+id/dashboard_delete_profile"
        android:text="@string/delete_profile"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        style="@style/button_16"/>

    <Button
        android:id="@+id/dashboard_user_list"
        android:text="@string/user_list"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        style="@style/button_16"/>

    <Button
        android:id="@+id/dashboard_logout"
        android:text="@string/logout"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        style="@style/button_16"/>

</LinearLayout>